# mtp-manager

./: .gitignore  README.md  mtp-manager.py  mtproto.py  pyproject.toml  setup.sh
src/: app.py  bootstrap.py  controller.py  errors.py  paths.py
src/diagnostics/: __init__.py  aws.py  fake_tls.py  ports.py  service.py
src/i18n/: __init__.py  catalog.py  en.py  ru.py  zh.py
src/infra/: __init__.py  distro.py  firewall.py  locale.py  packages.py  public_ip.py  shell.py  storage.py  systemd.py  ufw.py
src/models/: __init__.py  export.py  health.py  secret.py  settings.py
src/services/: __init__.py  cleanup_service.py  diagnostics_service.py  export_service.py  install_service.py  inventory_service.py  network_service.py  proxy_runtime_service.py  settings_service.py  source_service.py  systemd_service.py
src/ui/: __init__.py  actions.py  app_styles.py  backend.py  console_app.py  dashboard.py  dialogs.py  feedback.py  forms.py  lists.py  modal_flow.py  modals.py  panels.py  prompt_app.py  screens.py  state.py  textual_app.py  theme.py  widgets.py
