[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtp-manager"
version = "1.0.0"
description = "Terminal UI manager for telemt on Debian, Ubuntu, Fedora, and Arch Linux"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
dependencies = [
  "textual>=8.2.1,<9",
]
keywords = ["telemt", "mtproto", "telegram", "systemd", "tui", "fake-tls"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/De-Par/mtp-manager"
Repository = "https://github.com/De-Par/mtp-manager"
Issues = "https://github.com/De-Par/mtp-manager/issues"
Backend = "https://github.com/telemt/telemt"

[project.scripts]
mtp-manager = "app:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["app", "bootstrap", "controller", "errors", "paths"]

[tool.setuptools.packages.find]
where = ["src"]
